[package]
name = "kctrl"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"
"build" = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"krpc_mars" = { git = 'https://github.com/Cahu/krpc-mars.git' }
tokio = { version = "0.2", features = ["macros", "rt-core", "sync"] }
tokio-serial = "4.3.3"
tokio-util = { version = "0.2.0", features = ["codec"], default-features = false }
futures = "0.3.5"
futures-util = "0.3.5"
bytes = "0.5.4"
serialport = "3.3.0"
num-traits = "0.2"
num-derive = "0.2"

[build-dependencies]
glob = "0.3"
krpc_mars_terraformer = { git = 'https://github.com/bobbo/krpc-mars-terraformer.git' }
ron = "0.5.1"
serde = { version = "1.0.110", features = ["serde_derive"] }
tera = "1.3.0"
itertools = "0.9.0"